# DataQuality

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
app/: contrato.py  etl.py  main.py  schema.py
docs/: index.md
tests/: conftest.py  test_funcao_ola.py  test_unit.py
