[tool.poetry]
name = "dataquality"
version = "0.1.0"
description = "Project to build ideas and understand about data quality"
authors = ["Lucas <lucasdastre10@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
taskipy = "^1.14.1"
poetry = "^2.1.3"
pytest = "^8.4.1"
mkdocs-material = "^9.6.16"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}
mkdocs-autorefs = "^1.4.2"
isort = "^6.0.1"
black = "^25.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
serve = "mkdocs serve"
docs = "mkdocs gh-deploy --clean"
test = "pytest tests"
lint = "flake8 src"
format = "black app tests"
typecheck = "mypy app"
check = "task lint && task typecheck && task test"
run = """
python3 app/main.py
"""
