[tool.poetry]
name = "dataquality"
version = "0.1.0"
description = "Project to build ideas and understand about data quality"
authors = ["Lucas <lucasdastre10@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
taskipy = "^1.14.1"
poetry = "^2.1.3"
pytest = "^8.4.1"
mkdocs-material = "^9.6.16"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}
mkdocs-autorefs = "^1.4.2"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.0.0"
mypy = "^1.17.1"
pydantic = "^2.11.7"
pandas = "^2.3.1"
pandera = "^0.25.0"
psycopg2 = "^2.9.10"
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.42"
pyyaml = "^6.0.2"
frictionless = "^5.18.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^7.3.0"
pandas-stubs = "^2.3.0.250703"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
serve = "mkdocs serve"
docs = "mkdocs gh-deploy --clean"
test = "pytest tests"
lint = "flake8 app"
format = "black app tests"
typecheck = "mypy app"
check = "task lint && task typecheck && task test"
run = """
python3 app/main.py
"""
